WebCore/platform/graphics/GraphicsLayer.h
@@ -247,7 +247,7 @@ public:
     virtual void removeAnimationsForKeyframes(const String& /* keyframesName */) { }
     virtual void pauseAnimation(const String& /* keyframesName */) { }
     
-    virtual void suspendAnimations();
+    virtual void suspendAnimations(double time);
     virtual void resumeAnimations();
     
     // Layer contents
