WebCore/rendering/RenderLayerBacking.h
@@ -101,7 +101,7 @@ public:
     void animationPaused(const String& name);
     void transitionFinished(int property);
 
-    void suspendAnimations();
+    void suspendAnimations(double time = 0);
     void resumeAnimations();
 
     IntRect compositedBounds() const;
